--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,17 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.volley:volley:1.1.1'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
 
     implementation 'mx.jesusmartinoza:sweet-password:0.2'
     implementation 'com.google.firebase:firebase-core:11.6.2'
 //    implementation 'com.google.firebase:firebase-auth:11.6.2'
+    implementation 'com.android.volley:volley:1.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
