--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Wed Apr 01 18:49:29 SGT 2020
+#Mon Jun 01 13:10:29 SGT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
+android.useAndroidX=true
+android.enableJetifier=true
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
